--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
     "classnames": "^2.5.1",
     "gsap": "^3.13.0",
@@ -20,9 +21,12 @@
     "mathjs": "^15.1.0",
     "normalize-scss": "^8.0.0",
     "react": "^19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.3.5",
-    "sass": "^1.94.2"
+    "react-tsparticles": "^2.12.2",
+    "sass": "^1.94.2",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
