--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-i18next": "^16.3.5",
     "react-tsparticles": "^2.12.2",
     "sass": "^1.94.2",
+    "swiper": "^12.1.0",
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
