fix homapage and links

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://manch0ffline.github.io/AB_AutoCheck",
+  "homepage": "https://manch0ffline.github.io/ab-auto-check",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
